--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "canva-dashboard",
   "version": "1.0.0",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.3",
+    "@emotion/is-prop-valid": "^1.3.1",
+    "@types/node": "^22.13.1",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "cors": "^2.8.5",
+    "express": "^4.21.2",
     "framer-motion": "^12.4.1",
+    "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-grid-layout": "1.3.4",
+    "react-dom": "^19.0.0",
+    "react-grid-layout": "^1.3.4",
     "react-icons": "^5.4.0",
-    "react-konva": "^19.0.2",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "reactflow": "^11.11.4"
@@ -26,16 +28,15 @@
     "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^19.0.3",
     "@types/react-grid-layout": "^1.3.5",
-    "@types/trusted-types": "^2.0.7",
-    "@types/uuid": "^10.0.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.1"
+    "@types/trusted-types": "^2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node server.js",
+    "dev": "concurrently \"npm start\" \"npm run server\"",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "analyze": "source-map-explorer build/static/js/*.js"
   },
   "browserslist": {
     "production": [
